# supabase-authentication

./: README.md  main.py  requirements.txt
auth/: handlers.py
backups/: main copy.py
data/: data.md
fastapi/: api copy.py  api.py  install.sh  requirements.txt  supabase_setup.sql
fastapi/app/api/: auth.py  profile.py
fastapi/app/db/: supabase.py
fastapi/app/models/: user.py
fastapi/app/services/: llama_index.py
fastapi/app/sql/: init.sql
index/: default__vector_store.json  docstore.json  index_store.json
jit-streamlit-main/: README.md  install.sh  pyproject.toml  setup.py
jit-streamlit-main/auth/: forms.py
jit-streamlit-main/fastapi/: readme.md
jit-streamlit-main/sql/: init.sql
jit-streamlit-main/src/pages/: profile.py
jit-streamlit-main/utils/: supabase_client.py
src/pages/: chat.py  home.py  settings.py
