[tool.poetry]
name = "streamlit-supabase-app"
version = "0.1.0"
description = "A Streamlit app with Supabase authentication"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12.0"
supabase = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
